kubernetes/apps/base/management/paperless/ingress.yaml
# Paperless-ngx Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: management
  labels:
    app.kubernetes.io/name: paperless
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  tls:
    - hosts:
        - paperless.home-infra.net
      secretName: wildcard-home-infra-net-tls
  rules:
    - host: paperless.home-infra.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless
                port:
                  number: 80
